<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.baubapchallenge.presentation.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_title_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginTop="@dimen/space_20"
            android:text="@string/app_name"
            android:textSize="@dimen/text_big_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_view_baubap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_20"
            android:scaleType="centerInside"
            android:src="@drawable/img_baubap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title_screen" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email"
            style="@style/TextInputStyle"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginEnd="@dimen/space_20"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_baubap">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                style="@style/EditTextEmailStyle"
                android:hint="@string/email"
                android:text="@={viewModel.email}"
                tools:text="@string/email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            style="@style/TextInputStyle"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginEnd="@dimen/space_20"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                style="@style/EditTextPasswordStyle"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:text="@={viewModel.password}"
                tools:text="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="@+id/text_input_layout_password"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_20"
            android:onClick="@{() -> viewModel.onLoginButtonClicked()}"
            android:text="@string/login"
            android:textSize="@dimen/text_medium_size"
            app:layout_constraintBottom_toTopOf="@+id/text_view_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_forgot_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4"
            android:layout_marginBottom="@dimen/space_20"
            android:text="@string/create_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>