<resources>
    <string name="app_name">Login Challenge</string>
    <string name="login">Inicia Sesión</string>
    <string name="create_account">Crea tu cuenta</string>
    <string name="email">Correo electronico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">Olvidaste tu constraseña?</string>
    <string name="password_error">Verifica tu contraseña</string>
    <string name="email_error">Ingresa un correo electrónico valido</string>
    <string name="title_loading">Cargando</string>
    <string name="login_success">Ingreso Correcto ^_^</string>
    <string name="login_failure">Credentiales incorrectas.\nRevisa el readme</string>
    <string name="login_error">Ha ocurrido un error, intente más tarde.</string>
</resources>